<resources>
    <string name="app_name">Ghostium</string>
    <string name="don_t_have_an_account_choose_one_of_these_three_option_to_sign_up">Don\'t have an account? Choose one of these three options to sign up</string>
    <string name="have_you_forgotten_your_passow_rd_click_here">Have you forgotten your password? Click here!</string>
    <string name="log_in">Log in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbutton">searchButton</string>
    <string name="enter_your_crypto">Search your crypto</string>
    <string name="search">Search</string>


    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="no_data">No Data</string>
    <string name="nothing_found">Apologize! Nothing Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_to_top">Back to Top</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="back_button">Back Button</string>
    <string name="no_description">No description has been provided.</string>
    <string name="high_24h">High (24h)</string>
    <string name="mark_cap">Mark. Cap</string>
    <string name="low_24h">Low (24h)</string>
    <string name="description">Description</string>
    <string name="price">Price:</string>
    <string name="owned_by" translatable="false">Owned by</string>
    <string name="created_by" translatable="false">Created by</string>
    <string name="title_activity_intro" translatable="false">IntroActivity</string>
    <string name="option_nft" translatable="false">Beloved Nfts</string>
    <string name="option_cryptos">Favourite Cryptos</string>
    <string name="options_wallet" translatable="false">Connect you wallet</string>
    <string name="option_about">About Us</string>

    <!--Transition Tags-->
    <string name="transition_coin_image" translatable="false">coinImage</string>
    <string name="transition_coin_name" translatable="false">coinName</string>
    <string name="transition_coin_symbol" translatable="false">coinSymbol</string>
    <string name="transition_article_image" translatable="false">articleImage</string>
    <string name="transition_article_title" translatable="false">articleTitle</string>
    <string name="transition_article_date" translatable="false">articleDate</string>
    <string name="transition_option_image" translatable="false">optionImage</string>
    <string name="transition_option_name" translatable="false">optionName</string>
    <string name="all">All</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="option_language">Language</string>
    <string name="option_currency">Currency</string>
    <string name="option_articles">Saved Articles</string>
    <string name="option_contact">Contact Us</string>
    <string name="option_share">Share the Ghostium App</string>
    <string name="option_rate">Rate the Ghostium App</string>
    <string name="english" translatable="false">English</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="italiano" translatable="false">Italiano</string>
    <string name="espanol" translatable="false">Español</string>
    <string name="euro_currency" translatable="false">Euro - €</string>
    <string name="dollar_currency" translatable="false">U.S. Dollar - $</string>
    <string name="pounds_currency" translatable="false">British Pound - £</string>
    <string name="australian_currency" translatable="false">Australian Dollar -$</string>
    <string name="language_hint_desc">For better experience and results the language option affects only the texts inside the app.</string>
    <string name="hint">Hint</string>
    <string name="first_day">1d</string>
    <string name="seven_days">7d</string>
    <string name="one_month">1m</string>
    <string name="three_months">3m</string>
    <string name="one_year">1y</string>
    <string name="top_fifty">Top 50 Cryptos</string>
    <string name="recently_searches">Recent Searches</string>
    <string name="trending_cryptos">Trending Cryptos</string>
    <string name="share_article">Share Article</string>
    <string name="save_article">Save Article</string>
    <string name="news_in_brief">News in Brief</string>
    <string name="unsave_article">Unsave Article</string>
    <string name="unsaved">Unsaved</string>
    <string name="saved">Saved</string>
    <string name="no_searched_found">You don\'t have recent searches.</string>
    <string name="no_cryptos_found">Nothing in your Favourite Cryptos</string>
    <string name="no_articles_found">Nothing in Saved Articles</string>
    <string name="web_broswer">Web Broswer</string>
    <string name="you_re_currently_offline">You \'re currently offline.</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_n_please_try_again">Something went wrong. \n Please try again</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>