<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_favourite_nav"
        android:shortcutDisabledMessage="@string/something_went_wrong"
        android:shortcutId="cryptos"
        android:shortcutLongLabel="@string/option_cryptos"
        android:shortcutShortLabel="@string/option_cryptos">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.rdp.ghostium.ui.tabs.settings.favourite.FavouriteActivity"
            android:targetPackage="com.rdp.ghostium" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_articles_nav"
        android:shortcutDisabledMessage="@string/something_went_wrong"
        android:shortcutId="articles"
        android:shortcutLongLabel="@string/option_articles"
        android:shortcutShortLabel="@string/option_articles">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.rdp.ghostium.ui.tabs.settings.bookmark.BookmarkActivity"
            android:targetPackage="com.rdp.ghostium" />
    </shortcut>
</shortcuts>