<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/iconApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/emailInput"
        layout="@layout/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconApp" />

    <include
        android:id="@+id/passwordInput"
        layout="@layout/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <Button
        android:id="@+id/loginButton"
        style="@style/big_buttons"
        android:textAppearance="@style/caption_bold"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/have_you_forgotten_your_passow_rd_click_here"
        android:textAlignment="center"
        android:textAppearance="@style/small_regular"
        android:textColor="@color/Gray3"
        android:textColorLink="@color/Black"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/Gray3"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintBottom_toTopOf="@id/gmailButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <ImageButton
        android:id="@+id/gmailButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/facebookButton"
        app:layout_constraintBottom_toTopOf="@+id/registerDescription"/>

    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gmailButton"
        app:layout_constraintStart_toStartOf="@id/iconApp"
        app:layout_constraintEnd_toEndOf="@id/iconApp"
        app:layout_constraintBottom_toBottomOf="@id/gmailButton"/>

    <ImageButton
        android:id="@+id/emailButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/facebookButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gmailButton"/>

    <TextView
        android:id="@+id/registerDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:textAppearance="@style/caption_bold"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"
        android:text="@string/don_t_have_an_account_choose_one_of_these_three_option_to_sign_up"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>